@@ -24,63 +24,50 @@
     <title>DESCRIPTION</title>
 
     <para>
-      <command>rtwizard</command> is a tool that automates the use of
-      several BRL-CAD graphical programs to produce complex images.
-      There are two primary modes of operation - a graphical client to
-      guide users through the process of creating images, and a
-      command line mode to allow users who already know what options
-      they wish to use to quickly and automatically produce images.
-      Graphical mode is used when insufficient information is supplied
-      to produce an image (unless an option specifically ruling out
-      graphical mode is passed) and command line mode (used
-      automatically when there <emphasis remap="I">is</emphasis>
-      enough information to produce an image, unless GUI mode is
-      specifically requested.) When in graphical mode, rtwizard is
-      self explanatory.  This manual documents the command line
-      options available when <emphasis remap="I">not</emphasis>
-      operating in graphical mode.
+      <emphasis remap="I">RtWizard</emphasis> is a tool that
+      orchestrates several BRL-CAD utilities to produce complex images
+      of geometry in prescribed styles.  There are two primary modes
+      of operation.
     </para>
 
     <para>
-      Images produced by <emphasis remap="I">rtwizard</emphasis> use
-      three primary elements - standard full color raytracings
-      produced by <command>rt</command>, "line drawing" style images
-      produced by <command>rtedge</command>, and a faded greyscale
-      version of color raytracings produced with a variety of image
-      manipulation tools included with BRL-CAD.
+      The first mode of operation is a graphical client to guide users
+      through the process of creating images interactively.  To invoke
+      that mode, simply run <command>rtwizard</command> and a
+      wizard-style GUI should appear.  Graphical mode has integrated
+      documentation and workflows, and is intended to be discoverable
+      and self-explanatory.
     </para>
 
     <para>
-      When specifying options on the command line, it is usually
-      better practice to fully qualify what a particular item is - for
-      example, using <option>-i</option> to specifically identify the
-      input file instead of relying on the .g suffix.  There is a
-      limited ability to recognize common usage patterns (for example,
-      "<command>rtwizard</command> file.g output_image.png
-      geometry_object" will generate an image of geometry_object in
-      the file output_image.png) but the most unambigous specification
-      uses the options.
+      The second mode of operation is a command line mode to allow
+      users who already know what options they wish to use to quickly
+      and automatically produce images.  It is also useful for
+      programmatic scripting and bulk rendering of images.
     </para>
+
     <para>
-      The following options are recognized.
+      <emphasis remap="I">RtWizard</emphasis> generates and composites
+      images in a variety of styles including full-color images, edge
+      line drawings, and "ghosted" images with options for
+      highlighting and emphasizing model features and subsets of
+      models.  Color ray tracings are produced by
+      <command>rt</command>, "hidden-line drawings" produced by
+      <command>rtedge</command>, and semi-transparent / faded
+      greyscale "ghosted" ray tracings are produced with
+      <command>rt</command> and a variety of image manipulation tools
+      included with BRL-CAD.  GUI-mode presents workflows for setting
+      up each image type, and command-line mode provides the
+      <option>--type</option>, described below.
+    </para>
+
+    <para>
+      The following command-line options are recognized by
+      <command>rtwizard</command>:
     </para>
     <variablelist remap="TP">
       <title>Input/Output Options</title>
-      <varlistentry>
-        <term><replaceable>geometry_file.g</replaceable></term>
-        <listitem>
-          <para>
-	    The first argument without an option flag (the leftmost
-	    argument is regarded as the first) that identifies an
-	    existing file with a .g suffix will be used to specify the
-	    working geometry database, unless overridden by the
-	    <option>i</option> option.  Remember that some option
-	    flags accept multiple arguments and can create ambiguities
-	    about the meaning of a .g option and in such situations
-	    <option>i</option> should be used.
-          </para>
-        </listitem>
-      </varlistentry>
+
       <varlistentry>
         <term><option>-i</option> <replaceable>geometry_file</replaceable></term>
         <term><option>--input</option> <replaceable>geometry_file</replaceable></term>
@@ -93,36 +80,15 @@
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><replaceable>output_file.imgformat</replaceable></term>
-        <listitem>
-          <para>
-	    The name and image format of the final output image
-	    generated by rtwizard.  When specifying the output file
-	    name without using a flag, a .pix or .png image format
-	    extension is necessary.  The first valid, unflagged output
-	    file name will be used unless overridden by the
-	    <option>o</option>.  If the output filename uses a .png
-	    image format extension, the Portable Network Graphics
-	    image format will be used when writing out the file.
-	    Otherwise, a standard BRL-CAD pix image will be generated.
-	    Remember that some option flags accept multiple arguments
-	    and can create ambiguities about the meaning of a image
-	    name option and in such situations <option>o</option>
-	    should be used.
-          </para>
-        </listitem>
-      </varlistentry>
-      <varlistentry>
         <term><option>-o</option> <replaceable>output_file[.imgformat]</replaceable></term>
         <term><option>--output</option> <replaceable>output_file[.imgformat]</replaceable></term>
         <listitem>
           <para>
-	    The name (and optionally the image format) of the final
-	    output image generated by rtwizard.  If the output
-	    filename uses a .png file extension, the Portable Network
-	    Graphics image format will be used when writing out the
-	    file.  Otherwise, a standard BRL-CAD pix image will be
-	    generated.
+	    The name (and optionally the output image format) of the
+	    final image generated by rtwizard.  If the output filename
+	    uses a .png file extension, the Portable Network Graphics
+	    image format will be used when writing out the file.
+	    Otherwise, a standard BRL-CAD pix image will be generated.
           </para>
         </listitem>
       </varlistentry>
@@ -131,12 +97,14 @@
         <term><option>--fbserv-device</option> <replaceable>framebuffer_device</replaceable></term>
         <listitem>
           <para>
-	    The type of framebuffer to use when running fbserv to
-	    establish a framebuffer.  By default, "/dev/mem" is used
-	    for a non-graphical framebuffer - other options include
-	    /dev/X, /dev/ogl, and (Windows only) /dev/wgl. A /dev/mem
-	    framebuffer created by <command>rtwizard</command> will be
-	    closed after the image generation is complete.
+            Under the hood, <command>fbserv</command> is run to assist
+            with processing.  The <option>-d</option> option specifies
+            the type of framebuffer <command>fbserv</command> should
+            use in lieu of the default memory-only interface
+            (/dev/mem).  See <command>fbhelp</command> for a listing
+            of available device options. Framebuffer servers started
+            by <command>rtwizard</command> are automatically closed
+            after image generation is complete.
           </para>
         </listitem>
       </varlistentry>
@@ -145,12 +113,13 @@
         <term><option>--fbserv-port</option> <replaceable>port_number</replaceable></term>
         <listitem>
           <para>
-	    The number of the framebuffer port to use when running
-	    <command>fbserv</command> to establish a framebuffer.  An
-	    existing framebuffer may also be specified and used.  In
-	    the case of a pre-existing non-graphical framebuffer,
-	    <command>rtwizard</command> will not close the framebuffer
-	    automatically after the raytracing process is complete.
+	    The <option>-p</option> option specifies the framebuffer
+	    port number to use when running <command>fbserv</command>
+	    to establish a framebuffer.  An existing framebuffer
+	    server port be specified.  In the case of a pre-existing
+	    framebuffer servers, <command>rtwizard</command> will not
+	    close the framebuffer automatically after the raytracing
+	    process is complete.
           </para>
         </listitem>
       </varlistentry>
@@ -179,44 +148,44 @@
     <variablelist remap="TP">
       <title>Model View Options</title>
       <para>
-        When it comes to preparing the view for an RtWizard image,
-        there are two options.  One is to use the "user level"
-        controls, which reflect the view manipulations used by users
-        on the command line.  The other is to use the "low level"
-        specifiers, which are more typically used when
-        <command>rtwizard</command> is run by automated scripts.  The
-        two methods are mutually exclusive.
+        When it comes to preparing the view for an <emphasis
+        remap="I">RtWizard</emphasis> image, there are two options.
+        One is to use the "user level" controls, which reflect the
+        view manipulations used by users on the command line.  The
+        other is to use "low level" specifiers, which are more
+        typically used when <command>rtwizard</command> is run by
+        automated scripts.  The two methods are mutually exclusive.
       </para>
       <varlistentry>
-        <term><option>-a</option> <replaceable>angle (degrees)</replaceable></term>
-        <term><option>--azimuth</option> <replaceable>angle (degrees)</replaceable></term>
+        <term><option>-a</option> <replaceable>angle</replaceable></term>
+        <term><option>--azimuth</option> <replaceable>angle)</replaceable></term>
         <listitem>
-          <para>Set azimuth angle.</para>
+          <para>Set azimuth angle (in degrees).</para>
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><option>-e</option> <replaceable>angle (degrees)</replaceable></term>
-        <term><option>--elevation</option> <replaceable>angle (degrees)</replaceable></term>
+        <term><option>-e</option> <replaceable>angle</replaceable></term>
+        <term><option>--elevation</option> <replaceable>angle</replaceable></term>
         <listitem>
           <para>
-            Set elevation angle.
+            Set elevation angle (in degrees).
           </para>
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><option>--twist</option> <replaceable>angle (degrees)</replaceable></term>
+        <term><option>--twist</option> <replaceable>angle</replaceable></term>
         <listitem>
           <para>
-            Set twist angle.
+            Set twist angle (in degrees).
           </para>
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><option>-P</option> <replaceable>angle (degrees)</replaceable></term>
-        <term><option>--perspective</option> <replaceable>angle (degrees)</replaceable></term>
+        <term><option>-P</option> <replaceable>angle</replaceable></term>
+        <term><option>--perspective</option> <replaceable>angle</replaceable></term>
         <listitem>
           <para>
-            Set the perspective angle.
+            Set the perspective angle (in degrees).
           </para>
         </listitem>
       </varlistentry>
@@ -225,8 +194,10 @@
         <term><option>--zoom</option> <replaceable>value</replaceable></term>
         <listitem>
           <para>
-            Set the zoom factor (smaller factor results in a smaller
-            object in the view, and vice versa).
+            Set the zoom factor, specified as a multiplier on the
+            default view size. Values less than one result in a
+            smaller object in the view.  Values greater than one
+            result in larger objects (due to the view being zoomed).
           </para>
         </listitem>
       </varlistentry>
@@ -242,22 +213,16 @@
 
     <variablelist remap="TP">
       <title>Image Generation Options</title>
-      <para>
-        The three options that are used to input geometry object lists
-        need to parse multiple arguments, so any options immediately
-        following either of them need to use an explicit argument flag
-        to signal termination of the input list to the option parser -
-        for example, an input .g file needs to be specified with the
-        <option>-i</option> if it comes after a list of ghost objects.
-      </para>
 
       <varlistentry>
-        <term><option>-c</option> <replaceable>obj1[, ...]</replaceable> </term>
-        <term><option>--color-objects</option> <replaceable>obj1[, ...]</replaceable> </term>
+        <term><option>-c</option> <replaceable>obj1[,...]</replaceable> </term>
+        <term><option>--color-objects</option> <replaceable>obj1[,...]</replaceable> </term>
         <listitem>
           <para>
-            Specify objects to render using full color using a comma
-            separated list.
+            Specify objects to render using full color using a
+            comma-separated list.  The entire list may be enclosed in
+            double-quotes if object names have spaces (e.g., -c
+            "obj1,obj 2").
           </para>
         </listitem>
       </varlistentry>
@@ -272,12 +237,14 @@
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><option>-g</option> <replaceable>obj1[, ...]</replaceable></term>
-        <term><option>--ghost-objects</option> <replaceable>obj1[, ...]</replaceable></term>
+        <term><option>-g</option> <replaceable>obj1[,...]</replaceable></term>
+        <term><option>--ghost-objects</option> <replaceable>obj1[,...]</replaceable></term>
         <listitem>
           <para>
             Specify objects to be rendered using ghosting using a
-            comma separated list.
+            comma-separated list.  The entire list may be enclosed in
+            double-quotes if object names have spaces (e.g., -g
+            "obj1,obj 2").
           </para>
         </listitem>
       </varlistentry>
@@ -292,12 +259,14 @@
         </listitem>
       </varlistentry>
       <varlistentry>
-        <term><option>-l</option> <replaceable>obj1[, ...]</replaceable></term>
-        <term><option>--line-objects</option> <replaceable>obj1[, ...]</replaceable></term>
+        <term><option>-l</option> <replaceable>obj1[,...]</replaceable></term>
+        <term><option>--line-objects</option> <replaceable>obj1[,...]</replaceable></term>
         <listitem>
           <para>
-            Specify objects to render lines with using rtedge using a
-            comma separated list.
+            Specify objects to render edge lines for using a
+            comma-separated list.  The entire list may be enclosed in
+            double-quotes if object names have spaces (e.g., -l
+            "obj1,obj 2").
           </para>
         </listitem>
       </varlistentry>
@@ -318,7 +287,7 @@
         <term><option>--non-line-color</option> <replaceable>value</replaceable></term>
         <listitem>
           <para>
-            Specify color rtedge will use for non-line rendering.
+            Specify the color to use for non-line rendering.
           </para>
         </listitem>
       </varlistentry>
@@ -339,8 +308,8 @@
         <term><option>--occlusion</option> <replaceable>value</replaceable></term>
         <listitem>
           <para>
-            Specify the occlusion mode rtedge will use for line
-            rendering.
+            Specify the occlusion mode to use for line rendering. See
+            <command>rtedge</command> manual page for value options.
           </para>
         </listitem>
       </varlistentry>
@@ -363,14 +332,18 @@
         <listitem>
           <para>
             Specify the type of image to be rendered. The images
-            produces by <command>rtwizard</command> are categorized by
-            <emphasis remap="I">picture type</emphasis> - there are
+            produced by <command>rtwizard</command> are categorized by
+            <emphasis remap="I">picture type</emphasis>.  There are
             six picture types built on full color raytracing,
-            ghosting, and <command>rtedge</command> line renderings.
-            If a type is specified and insufficient information is
-            supplied to generate that particular image type, rtwizard
-            will exit with an error.
+            ghosting, and edge line renderings.
+          </para>
+          <para>
+            NOTE: If a type is specified and insufficient information
+            is supplied to generate that particular image type,
+            rtwizard will exit with an error.
+          </para>
 
+          <para>
             <table>
               <title>RtWizard Image Types</title>
 
@@ -386,34 +359,41 @@
 	          <row>
 	            <entry>A</entry>
 	            <entry>Simple Full-Color Image</entry>
-	            <entry>Standard <command>rt</command> image.</entry>
+	            <entry>Standard <command>rt</command>
+	            image.</entry>
 	          </row>
 	          <row>
 	            <entry>B</entry>
 	            <entry>Simple Line Drawing</entry>
-	            <entry>Standard <command>rtedge</command> image.</entry>
+	            <entry>Standard <command>rtedge</command>
+	            image.</entry>
 	          </row>
 	          <row>
 	            <entry>C</entry>
 	            <entry>Highlighted Image</entry>
-	            <entry>Full Color <command>rt</command> image enhanced with <command>rtedge</command> lines.</entry>
+	            <entry>Full Color <command>rt</command> image
+	            enhanced with <command>rtedge</command>
+	            lines.</entry>
 	          </row>
 	          <row>
 	            <entry>D</entry>
 	            <entry>Mixed Full Color and Edges</entry>
-	            <entry>Like Type C, except objects may be selectively enhanced with <command>rtedge</command> lines.</entry>
+	            <entry>Like Type C, except objects may be
+	            selectively enhanced with
+	            <command>rtedge</command> lines.</entry>
 	          </row>
 	          <row>
 	            <entry>E</entry>
 	            <entry>Ghost Image with Inserts</entry>
-	            <entry>A combination of Full Color elements and faded greyscale raytracings for context.</entry>
+	            <entry>A combination of Full Color elements and
+	            faded greyscale raytracings for context.</entry>
 	          </row>
 	          <row>
 	            <entry>F</entry>
 	            <entry>Ghost Image with Inserts and Edges</entry>
-	            <entry>A Type E image further enhanced with <command>rtedge</command> lines.</entry>
+	            <entry>A Type E image further enhanced with
+	            <command>rtedge</command> lines.</entry>
 	          </row>
-
 	        </tbody>
               </tgroup>
             </table>
@@ -430,7 +410,40 @@
           </para>
         </listitem>
       </varlistentry>
+    </variablelist>
 
+    <variablelist remap="TP">
+      <title>Compatibility Options</title>
+
+      <varlistentry>
+        <term><replaceable>geometry_file.g</replaceable></term>
+        <listitem>
+          <para>
+            For usage compatibility with <command>rt</command> and
+            other tools, the first (leftmost) argument without an
+            option flag that identifies an existing .g file is assumed
+            to be the input geometry database.  Note, some argument
+            configurations can result in ambiguity (e.g., objects with
+            a .g suffix).  As such, The <option>-i</option> is
+            preferred for specifying the input geometry database.
+          </para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><replaceable>output_image.{pix|png}</replaceable></term>
+        <listitem>
+          <para>
+	    This specifies the file name and image format of the
+	    resulting image to be output by rtwizard.  When specifying
+	    the output file name without using a flag, a .pix or .png
+	    image format extension is necessary.  The first valid,
+	    unflagged output file name will be used unless overridden
+	    by the <option>-o</option>.  Note that some option flags
+	    accept multiple arguments and can create ambiguity. In
+	    such situations <option>-o</option> should be used.
+          </para>
+        </listitem>
+      </varlistentry>
     </variablelist>
 
   </refsection>
@@ -443,39 +456,39 @@
     </para>
 
     <example>
-      <title>Basic Color Image</title>
+      <title>Simple Full-Color Image</title>
 
       <para>
-        <userinput>rtwizard m35.g component</userinput>
+        <userinput>rtwizard -i m35.g -c component -o m35.png</userinput>
       </para>
       <para>
-        Results in a default color image of the m35 truck, output to
-        rtwizard.pix
-      </para>
-    </example>
-
-    <example>
-      <title>Line Drawing Image</title>
-
-      <para>
-        <userinput>rtwizard -d /dev/ogl m35.g -l component</userinput>
-      </para>
-      <para>
-        Results in a line drawing of the m35 truck being display in an
-        OpenGL framebuffer
+        Results in a default color image of the m35 truck object named
+        'component' with output saved to m35.png
       </para>
     </example>
 
     <example>
-      <title>Complex Image</title>
+      <title>Simple Line Drawing Image</title>
 
       <para>
-        <userinput>rtwizard -d /dev/ogl -i m35.g -c component/power.train -g component -l component</userinput>
+        <userinput>rtwizard -d /dev/wgl -i m35.g -l component</userinput>
+      </para>
+      <para>
+        Results in a line drawing of the m35 truck being display in a
+        Windows-specific OpenGL window instead of saving to a file.
+      </para>
+    </example>
+
+    <example>
+      <title>Ghost Image with Inserts and Edges</title>
+
+      <para>
+        <userinput>rtwizard -i m35.g -c component/power.train -g component -l component</userinput>
       </para>
       <para>
         Results in a view of the m35 truck highlighting the engine (in
         color) with the truck being shown as a ghosted, edged
-        background.
+        background, with output saved to a default rtwizard.pix file.
       </para>
     </example>
 
@@ -483,11 +496,12 @@
       <title>Complex Image with Non-Default View</title>
 
       <para>
-        <userinput>rtwizard -d /dev/ogl -i m35.g -c component/power.train -g component -l component -a -35 -e 15 -z 1.6</userinput>
+        <userinput>rtwizard -i m35.g -c component/power.train -g component -l component -a -35 -e 15 -z 1.6</userinput>
       </para>
       <para>
         Same as the previous image, except viewing the truck from a
-        different direction and zoomed in closer.
+        different direction and zoomed in closer, with output saved to
+        a default rtwizard.pix file.
       </para>
     </example>
 
@@ -495,11 +509,11 @@
       <title>Multiple Color Objects</title>
 
       <para>
-        <userinput>rtwizard -d /dev/ogl -i m35.g -c component/power.train, component/suspension -z 1.6</userinput>
+        <userinput>rtwizard -d /dev/ogl -i m35.g -c component/power.train,component/suspension -z 1.6</userinput>
       </para>
       <para>
         View the power train and suspension of the truck as color
-        objects.
+        objects in a Mac-/Linux-specific OpenGL window.
       </para>
     </example>
 
@@ -508,7 +522,7 @@
   <refsection xml:id="see_also">
     <title>SEE ALSO</title>
 
-    <para><citerefentry><refentrytitle>rt</refentrytitle><manvolnum>1</manvolnum></citerefentry>, <citerefentry><refentrytitle>rtedge</refentrytitle><manvolnum>1</manvolnum></citerefentry></para>
+    <para><citerefentry><refentrytitle>rt</refentrytitle><manvolnum>1</manvolnum></citerefentry>,<citerefentry><refentrytitle>rtedge</refentrytitle><manvolnum>1</manvolnum></citerefentry>,<citerefentry><refentrytitle>fbhelp</refentrytitle><manvolnum>1</manvolnum></citerefentry>,<citerefentry><refentrytitle>fbserv</refentrytitle><manvolnum>1</manvolnum></citerefentry></para>
   </refsection>
 
   <refsection xml:id="copyright">
