@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 20XX-0X-XX  Release 7.36.2                                     ---
 ----------------------------------------------------------------------
 
+* improved and restructured rtwizard's manual page - Sean Morrison
 * fixed E command in MGED - Cliff Yapp
 * made improvements to a variety of manual pages - Josh Baker
 
